<?xml version="1.0"?>
<package format="2">
    <name>hector_description</name>
    <version>0.0.0</version>
    <description>The hector_description package</description>

    <maintainer email="yiyuc@usc.edu">yiyuc</maintainer>
    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>roscpp</depend>
    <depend>std_msgs</depend>

</package>
